swagger docs generating, issues with dynamic naming of routes
